--- a/styles/styles.css
+++ b/styles/styles.css
@@ -85,7 +85,7 @@ width: 100%;
 height: 48px;
 }
 		
-/* TABS */
+/* OLD TABS */
 /*
 a.tab {
 border-radius: 0;
@@ -159,6 +159,24 @@ color: white;
 -o-transition-duration: 0s;
 }
 		
+
+/* NOT SURE IF PART OF NEW TABS OR OLD TABS */
+
+header a.tab.darkLink {
+border-color: #333;
+background-color: #333;
+color: white;
+}
+header a.tab.darkLink:hover {
+border-color: #333;
+background-color: #333;
+color: white;
+}
+header a.tab.darkLink:active {
+background-color: white;
+border-color: #333;  
+color: #333;
+}
 		
 		
 
@@ -217,21 +235,6 @@ color: #333;
 a.lightLink:active {
 background-color: #333;
 color: white;
-}
-header a.tab.darkLink {
-border-color: #333;
-background-color: #333;
-color: white;
-}
-header a.tab.darkLink:hover {
-border-color: #333;
-background-color: #333;
-color: white;
-}
-header a.tab.darkLink:active {
-background-color: white;
-border-color: #333;  
-color: #333;
 }
 a.hugebutton {
 border: solid 5px #333;
