--- a/styles/framework/videotext.css
+++ b/styles/framework/videotext.css
@@ -57,7 +57,7 @@ blockquote {
     border-width: 0 0 0 20px;
     border-style: solid;
 	margin-bottom: 20px;
-	margin-top: 60px;
+/*    margin-top: 60px;*/
 	background-color: #EEE;
 }
 blockquote *{
