Adjusted the @font-face stuff to work better on Windows.
Including IE9!

--- a/styles/glowytabs.css
+++ b/styles/glowytabs.css
@@ -1,6 +1,17 @@
+/*
+@font-face {
+    font-family: 'munroregular';
+    // The following line doesn't work for the test site, because of cross-domain stuff.
+    // src: url('http://sjsugamedev.com/sites/all/themes/trainhole/fonts/munro/munro-webfont.ttf') format('truetype');
+    src: url('../fonts/munro/munro-webfont.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+*/
 @font-face {
   font-family: 'munroregular';
-  src: url("../fonts/munro/munro-webfont.ttf") format('truetype');
+  src: url("../fonts/munro/munro-webfont.eot");
+  src: url("../fonts/munro/munro-webfont.eot?#iefix") format('embedded-opentype'), url("../fonts/munro/munro-webfont.woff") format('woff'), url("../fonts/munro/munro-webfont.ttf") format('truetype');
   font-weight: normal;
   font-style: normal;
 }
